mejoras importante en tratamiento de datos y carga como guardado y su uso en entrenamiento